syntax = "proto3";
package ink.pmc.playerdb.proto;

import "google/protobuf/empty.proto";

message DatabaseIdentifier {
  string server_id = 1;
  string uuid = 2;
}

service PlayerDbRpc {
  rpc Notify(DatabaseIdentifier) returns (google.protobuf.Empty);
  rpc MonitorNotify(google.protobuf.Empty) returns (stream DatabaseIdentifier);
}