syntax = "proto3";
package ink.pmc.options.proto;

import "OptionsUpdateNotify.proto";
import "google/protobuf/empty.proto";

service OptionsRpc {
  rpc NotifyOptionsUpdate(OptionsUpdateNotify) returns (google.protobuf.Empty);
  rpc MonitorOptionsUpdate(google.protobuf.Empty) returns (stream OptionsUpdateNotify);
}